--- a/unittest.circleci/config.yml
+++ b/unittest.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: |
             sudo apt-get install python3-pip
             python3 -m pip install --upgrade pip
-            python3 -m pip install -r requirements.txt  # Make sure to have a requirements.txt file with your dependencies
+            python3 -m pip install -r requirements.txt  
             
 
       - run:
