--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/python:3.8  # Choose the Python version you need
-
+      - image: circleci/python:3.8
 
     working_directory: ~/repo
 
@@ -14,15 +13,17 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo apt-get install python3-pip
-            python3 -m pip install --upgrade pip
-            python3 -m pip install -r requirements.txt  
-            
+            sudo apt-get install python3-venv
+            python3 -m venv venv
+            . venv/bin/activate
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
 
       - run:
           name: Run unittests
           command: |
-            python3 -m unittest unittest.py
+            . venv/bin/activate
+            python -m unittest unittest.py
 
 workflows:
   version: 2
